--- a/TSA-dates-exercises.ipynb
+++ b/TSA-dates-exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1de301d",
+   "id": "901ed18d",
    "metadata": {},
    "source": [
     "# Working with Time Series Data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e81ec11",
+   "id": "00555874",
    "metadata": {},
    "source": [
     "### sf_temps exercises"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38b0a265",
+   "id": "4e153da5",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02030faf",
+   "id": "01be1a6d",
    "metadata": {},
    "source": [
     "1. Resample by the day and take the average temperature. Visualize the average temperature over time.\n"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b88cc8f7",
+   "id": "c6fbd6cb",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9849dd2d",
+   "id": "d1c4693f",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1939e105",
+   "id": "5e5d2d1a",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "805c919a",
+   "id": "776140e8",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ad5532a2",
+   "id": "56586faa",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244b35b5",
+   "id": "20e23d31",
    "metadata": {},
    "source": [
     "2. Write the code necessary to visualize the minimum temperature over time."
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3f88db8c",
+   "id": "37f924a9",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c476b9",
+   "id": "5e294e76",
    "metadata": {},
    "source": [
     "3. Write the code necessary to visualize the maximum temperature over time."
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "20e74c2a",
+   "id": "875fb81a",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0927b2",
+   "id": "3671f284",
    "metadata": {},
    "source": [
     "4. Which month is the coldest, on average?\n"
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "92fcd6e5",
+   "id": "6c88cca5",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6e55bfbd",
+   "id": "bc81d932",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b8cf667",
+   "id": "00e7254b",
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5b44166c",
+   "id": "bc49e6ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "667f369f",
+   "id": "ad9bb541",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c15fb6d2",
+   "id": "6f126e8f",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cca6a469",
+   "id": "a7a369ae",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde0eebd",
+   "id": "035db01e",
    "metadata": {},
    "source": [
     "5. Which month has the highest average temperature?"
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3a1e85f3",
+   "id": "eadea39f",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1d43290d",
+   "id": "29174ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d8dde573",
+   "id": "0e68b678",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0daa0924",
+   "id": "71a95b1c",
    "metadata": {},
    "source": [
     "6. Resample by the day and calculate the min and max temp for the day (Hint: .agg(['min', 'max'])). Use this resampled dataframe to calculate the change in temperature for the day. Which month has the highest daily temperature variability?"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "54b18440",
+   "id": "4663c1b5",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3cddafdf",
+   "id": "27104ecc",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bb52f6fe",
+   "id": "bacd306b",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dcae2b58",
+   "id": "f84d1854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "be2da9e4",
+   "id": "a21f864e",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "33a4cf1a",
+   "id": "3293f8f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a0ce92ec",
+   "id": "674652c1",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887d10f9",
+   "id": "467b228d",
    "metadata": {},
    "source": [
     "7. Bonus: Visualize the daily min, average, and max temperature over time on a single line plot, i.e. the min, average, and maximum temperature should be 3 seperate lines."
@@ -1375,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c6466d44",
+   "id": "607a06c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "be25fd5f",
+   "id": "da78bb6e",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6757ac3e",
+   "id": "09f082e1",
    "metadata": {},
    "source": [
     "### seattle_weather exercises"
@@ -1419,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8414614e",
+   "id": "52810ce3",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729ba619",
+   "id": "b9225c91",
    "metadata": {},
    "source": [
     "Use the dataset to answer the following questions:"
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c3a7bc",
+   "id": "ffcb15c7",
    "metadata": {},
    "source": [
     "1. Which year and month combination has the highest amount of precipitation?"
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c2386c55",
+   "id": "649f2265",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "00723bfa",
+   "id": "0521d1b6",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eac52360",
+   "id": "29068aec",
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "57475131",
+   "id": "d0abdbbb",
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "100558c0",
+   "id": "db76547f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1935,7 +1935,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c9289e6b",
+   "id": "4ce05aff",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "703de075",
+   "id": "3ab8a093",
    "metadata": {
     "scrolled": true
    },
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af8fb7e",
+   "id": "10b627e4",
    "metadata": {},
    "source": [
     "2. Visualize the amount of monthly precipitation over time."
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "534bb998",
+   "id": "a322aa8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "adff9193",
+   "id": "e2c13550",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39e87e4",
+   "id": "f5ad0344",
    "metadata": {},
    "source": [
     "3. Visualize the amount of wind over time. Choose a time interval you think is appropriate."
@@ -2040,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c15b7de0",
+   "id": "3917c18a",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4bec4f",
+   "id": "bcf972c6",
    "metadata": {},
    "source": [
     "4. Which year-month combination is the windiest?"
@@ -2081,7 +2081,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "85f6072c",
+   "id": "72548150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a0f08247",
+   "id": "3ea7c61e",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa97090e",
+   "id": "28eb6aed",
    "metadata": {},
    "source": [
     "5. What's the sunniest year? (Hint: which year has the highest number of days where weather == sun?)"
@@ -2123,7 +2123,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a4cff96c",
+   "id": "b7a9b0d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "452401aa",
+   "id": "ae5757c2",
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c4b9a9a7",
+   "id": "380a0240",
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6161def4",
+   "id": "0a23ea48",
    "metadata": {},
    "source": [
     "6. In which month does it rain the most?"
@@ -2304,7 +2304,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "00ec17b6",
+   "id": "68fcef64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "3cc10904",
+   "id": "0dda666c",
    "metadata": {},
    "outputs": [
     {
@@ -2463,7 +2463,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4c9c0bc7",
+   "id": "fd4d427d",
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957b07a3",
+   "id": "a6a67b05",
    "metadata": {},
    "source": [
     "7. Which month has the most number of days with a non-zero amount of precipitation?"
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "892088e5",
+   "id": "17d3e4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2502,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "438b303f",
+   "id": "d64327b3",
    "metadata": {},
    "outputs": [
     {
@@ -2658,7 +2658,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1a87e7b9",
+   "id": "82a721dd",
    "metadata": {},
    "outputs": [
     {
@@ -2678,16 +2678,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e00664",
+   "id": "b3d47d7d",
    "metadata": {},
    "source": [
-    "#### data.flights_20k()"
+    "### data.flights_20k() exercises"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "cf7491e4",
+   "id": "bb308c25",
    "metadata": {},
    "outputs": [
     {
@@ -2786,7 +2786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3082cafa",
+   "id": "82bd07ac",
    "metadata": {},
    "source": [
     "1. Convert any negative delays to 0."
@@ -2795,7 +2795,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "9ab6ae29",
+   "id": "b53c0768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2807,7 +2807,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "2dfcbbb2",
+   "id": "cff0fdde",
    "metadata": {},
    "outputs": [
     {
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f1d1819",
+   "id": "24bc69f9",
    "metadata": {},
    "source": [
     "2. Which hour of the day has the highest average delay?"
@@ -2844,7 +2844,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f4a7cf0c",
+   "id": "3b9a6347",
    "metadata": {},
    "outputs": [
     {
@@ -2944,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3ba641a4",
+   "id": "6b4591d7",
    "metadata": {},
    "outputs": [
     {
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31398166",
+   "id": "55625617",
    "metadata": {},
    "source": [
     "3. Does the day of the week make a difference in the delay amount?"
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "57fdcccf",
+   "id": "6c2b316f",
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3080,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "074ed833",
+   "id": "31826d0f",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "734b4e05",
+   "id": "3b6615fb",
    "metadata": {},
    "source": [
     "Answer: Yes"
@@ -3116,7 +3116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d690eff",
+   "id": "7dbe0c62",
    "metadata": {},
    "source": [
     "4. Does the month make a difference in the delay amount?"
@@ -3125,7 +3125,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "80ff6be3",
+   "id": "89cc2368",
    "metadata": {},
    "outputs": [
     {
@@ -3239,7 +3239,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "37e79beb",
+   "id": "1c40611f",
    "metadata": {},
    "outputs": [
     {
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3854ee15",
+   "id": "35a7a469",
    "metadata": {},
    "source": [
     "Answer: Yes"
@@ -3272,7 +3272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad32cc83",
+   "id": "f67f3c7b",
    "metadata": {},
    "outputs": [],
    "source": []
